syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.tew.grpcexample";
option java_outer_classname = "AlumnoProto";
option objc_class_prefix = "ALP";

package alumno;

service Finder {
  rpc findAlumno (AlumnoRequest) returns (AlumnoReply) {}
}

message AlumnoRequest {
  string uo = 1;
}

message AlumnoReply {
  string name = 1;
}